--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -56,7 +56,7 @@
                 </li>
             </ul>
             <p class="text-secondary mt-2 mb-2">
-                Here are some of {{ user.username }}'s tags :
+                Here are some of {{ profile.username }}'s tags :
             </p>
             <ul class="list-group">
                 <li class="list-group-item text-center bg-di-2xlighter">
