--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -82,7 +82,7 @@
                     <div class="card-header text-center">
                         <i class="fa fa-folder-open"></i>
                         <a class="card-link"
-                           href="{% url 'webimage:gallery_user_album' profile.username album.album.id %}">
+                           href="{% url 'webimage:gallery_user_album' profile.username album.album.uuid %}">
                             <span class="text">{{ album.album.name }}</span>
                         </a>
                     </div>
