changed add album to add more photos

--- a/webimage/templates/webimage/gallery/album.html
+++ b/webimage/templates/webimage/gallery/album.html
@@ -112,7 +112,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
             <div class="card">
                 <div class="card-header text-center">
-                    <a class="card-link" href="#"><i class="fa fa-plus-circle"></i> New album</a>
+                    <a class="card-link" href="#"><i class="fa fa-plus-circle"></i> Add more photos</a>
                 </div>
             </div>
         </div>
