--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -114,7 +114,8 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
             <div class="card">
                 <div class="card-header text-center">
-                    <a class="card-link" href="#"><i class="fa fa-plus-circle"></i> New album</a>
+                    <a class="card-link" href="{% url 'webimage:album_add' %}"><i class="fa fa-plus-circle"></i> New
+                        album</a>
                 </div>
             </div>
         </div>
