--- a/webimage/static/webimage/css/main.css
+++ b/webimage/static/webimage/css/main.css
@@ -54,3 +54,9 @@ body {
 img.gallery-img {
     object-fit: cover;
 }
+
+img.deepimage-img {
+    max-width: 80%;
+    max-height: 800px;
+    margin:auto;
+}
