--- a/webimage/templates/webimage/gallery/tags.html
+++ b/webimage/templates/webimage/gallery/tags.html
@@ -18,9 +18,17 @@
             <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header">
-                        <a class="card-link badge badge-secondary" href="{% url 'webimage:gallery_tags_tag' tag.tag.tag %}">
-                        <i class="fa fa-tag"></i>
-                            <span class="text-primary"></span><span class="text">{{ tag.tag.tag }}</span>
+                        <a class="card-link badge badge-secondary"
+                           href="{% url 'webimage:gallery_tags_tag' tag.tag.tag %}">
+                            <i class="fa fa-tag"></i>
+                            <span class="text-primary"></span>
+                            <span class="text">
+                                {% if tag.tag.tag|length < 12 %}
+                                    {{ tag.tag.tag }}
+                                {% else %}
+                                    {{ tag.tag.tag|slice:"0:12"}}..
+                                {% endif %}
+                            </span>
                         </a>
                         <span class="text-secondary float-right">{{ tag.usages }} usages</span>
                     </div>
