Added edit user form

--- a/webimage/templates/webimage/index.html
+++ b/webimage/templates/webimage/index.html
@@ -12,8 +12,8 @@
                     </span>
                     <span> - </span>
                     <span class="text-primary">@</span><span class="text-secondary">{{ user.username }}</span>
-                    <a class="card-link ml-2" href="{% url 'webimage:index' %}">
-                        <i class="fa fa-edit text-dark"></i>
+                    <a class="card-link ml-2" href="{% url 'webimage:profile' %}">
+                        <i class="fa fa-pencil text-dark"></i>
                     </a>
                 </h5>
                 <p class="text-secondary">
